--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "react-native-responsive-screen": "^1.4.2",
         "react-native-safe-area-context": "^4.10.1",
         "react-native-screens": "^3.31.1",
-        "react-native-tts": "^4.1.0"
+        "react-native-tts": "^4.1.0",
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
